# nes-rust

./: .editorconfig  .gitignore  LICENSE  README.md
bard/: Cargo.toml
bard/src/: cartridge.rs  framebuffer_viewer.rs  lib.rs  main.rs  nes.rs  system.rs  util.rs
bard/src/cpu/: cpu.rs  cpu_instructions.rs  cpu_logging.rs  decoded_instruction.rs  instruction_executor.rs  instruction_metadata.rs  instruction_mnemonic.rs  macros.rs  mnemonic.rs  mod.rs  opcode_table.rs  status_register.rs
bard/src/cpu/instructions/: arithmetic.rs  bitwise.rs  branching.rs  flags.rs  increment_decrement.rs  jumps.rs  load.rs  load_store.rs  mod.rs  returns.rs  shifts.rs  stack.rs  store.rs  system.rs  transfer.rs
bard/src/memory/: bus.rs  cpu_bus.rs  mod.rs  ppu_bus.rs
bard/src/ppu/: mod.rs  ppu.rs  ppu_memory_sections.rs
bard/tests/: cartrige_tests.rs  common.rs  memory_tests.rs  ppu_tests.rs
nes-rust/: Cargo.toml
nes-rust/src/: cartridge.rs  constants.rs  framebuffer_viewer.rs  lib.rs  macros.rs  main.rs  nes.rs  system.rs  util.rs
nes-rust/src/cpu/: addressing_mode.rs  cpu.rs  instruction.rs  instruction_executor.rs  instruction_metadata.rs  instruction_mnemonic.rs  macros.rs  mod.rs  opcode.rs  opcode_table.rs  status_register.rs
nes-rust/src/instructions/: ADC.rs  AND.rs  ASL.rs  BCC.rs  BCS.rs  BEQ.rs  BIT.rs  BMI.rs  BNE.rs  BPL.rs  BRK.rs  BVC.rs  BVS.rs  CLC.rs  CLD.rs  CLI.rs  CLV.rs  CMP.rs  CPX.rs  CPY.rs  DEC.rs  DEX.rs  (+33 more)
nes-rust/tests/: cpu_tests.rs  memory_tests.rs  system_tests.rs
roms/: .gitignore
scripts/: 6502_opcode_reference.html  extract_opcodes.py
(+71 files in other folders)
