[package]
name = "bard"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-C", "symbol-mangling-version=v0"]

[dependencies]
tempfile = "3.18.0"
lazy_static = "1.4"
once_cell = "1.18"
paste = "1.0"
bitflags = "2.8.0"
minifb = "0.28.0"
rand = "0.9.0"

[profile.release]
debug = true

[profile.dev]
opt-level = 0            # Ensure no optimizations
debug = true             # Include debug symbols
debug-assertions = true  # Keep debug assertions
overflow-checks = true   # Keep overflow checks

